Helm/Authentik/authentik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-service
spec:
  selector:
    app: authentik
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.40.62
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 9000 # change as required
      targetPort: 9000
    - name: https
      protocol: TCP
      port: 9443 # change as required
      targetPort: 9443
